Remove spring-batch. work-in-progress